--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
-readme = "README.md"
+# readme = "README.md"
 requires-python = ">=3.11,<3.12"
 dependencies = [
     "annotated-types (==0.7.0)",
