--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "langchain-openai (>=0.3.14,<0.4.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "elasticsearch (==8.17.1)",
+    "pytest (>=8.3.5,<9.0.0)",
 ]
 
 
