feat[be]: Add multi-LLM provider configuration support
- Settings 클래스에 다중 LLM 제공업체 지원 설정 추가 (OpenAI, Anthropic, Ollama, HuggingFace)
- 제공업체별 Chat 모델 및 Embedding 모델 설정 변수 추가
- LLM 제공업체별 필수 환경변수 검증 로직 구현 (validate_llm_config 메서드)
- .env.sample 파일에 새로운 LLM 설정 변수들과 샘플 값 추가

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,5 +1,26 @@
+# LLM Provider Configuration
+LLM_PROVIDER=openai
+
+# Chat Model Configuration
+CHAT_MODEL_NAME=gpt-4o
+CHAT_MODEL_TEMPERATURE=0.5
+CHAT_MODEL_MAX_TOKENS=2000
+
+# Embedding Model Configuration
+EMBEDDING_MODEL_NAME=text-embedding-3-small
+
 # OpenAI API Key
 OPENAI_API_KEY=sk-api-key
+
+# Anthropic API Key (Claude models)
+ANTHROPIC_API_KEY=sk-ant-api-key
+
+# Ollama Configuration (for local models)
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_TIMEOUT=60
+
+# HuggingFace Configuration (optional for local models)
+HUGGINGFACE_API_TOKEN=hf_api-token
 
 # Elasticsearch Configuration
 ELASTIC_HOST=http://localhost:9200
