feat[be]: Add HuggingFace provider and enhance local model support
- HuggingFaceProvider 구현체 추가
  - 로컬 Chat 및 Embedding 모델 지원
- OllamaProvider 개선
  - ChatOllama로 업그레이드 및 HuggingFace 임베딩 통합
- LLMFactory에 HuggingFace 매핑 추가
- .env.sample에 제공업체별 모델명 가이드라인 추가

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,12 +1,19 @@
 # LLM Provider Configuration
+# Supported: openai, anthropic, ollama, huggingface
 LLM_PROVIDER=openai
 
-# Chat Model Configuration
+# Chat Model Configuration (provider-specific)
+# OpenAI: gpt-4o, gpt-4o-mini
+# Anthropic: claude-3-5-sonnet-20241022, claude-3-haiku-20240307
+# Ollama: llama3.2, mistral, codellama
+# HuggingFace: microsoft/DialoGPT-medium, facebook/blenderbot-400M-distill
 CHAT_MODEL_NAME=gpt-4o
 CHAT_MODEL_TEMPERATURE=0.5
 CHAT_MODEL_MAX_TOKENS=2000
 
-# Embedding Model Configuration
+# Embedding Model Configuration (provider-specific)
+# OpenAI: text-embedding-3-small, text-embedding-3-large
+# HuggingFace/Ollama: sentence-transformers/all-MiniLM-L6-v2, sentence-transformers/all-mpnet-base-v2
 EMBEDDING_MODEL_NAME=text-embedding-3-small
 
 # OpenAI API Key
