feat[be]: Add dynamic embedding dimension support for multi-model compatibility
- Settings에 EMBEDDING_VECTOR_DIMS 설정 추가
  - 임베딩 모델별 벡터 차원수 동적 설정
- elastic_config.py를 함수형으로 리팩터링
  - get_elastic_mappings()로 동적 매핑 생성
- .env.sample에 임베딩 모델별 차원수 가이드라인 추가
- 임베딩 모델 변경 시 Elasticsearch 매핑 호환성 문제 해결

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -16,6 +16,11 @@ CHAT_MODEL_MAX_TOKENS=2000
 # HuggingFace/Ollama: sentence-transformers/all-MiniLM-L6-v2, sentence-transformers/all-mpnet-base-v2
 EMBEDDING_MODEL_NAME=text-embedding-3-small
 
+# Embedding Vector Dimensions (must match model)
+# text-embedding-3-small: 1536, text-embedding-3-large: 3072
+# all-MiniLM-L6-v2: 384, all-mpnet-base-v2: 768
+EMBEDDING_VECTOR_DIMS=1536
+
 # OpenAI API Key
 OPENAI_API_KEY=sk-api-key
 
