feat[be]: Implement purpose-specific model separation and update service layers
- Settings에 용도별 모델 설정 추가 (PIPELINE_MODEL_NAME, TROUBLESHOOTING_MODEL_NAME)
- LLMFactory 용도별 모델 생성 메서드 구현
  - create_pipeline_model(): 로그 분류/코멘트 생성용 (temperature=0.3)
  - create_troubleshooting_model(): 트러블슈팅 분석용 (temperature=0.5)
  - PipelineService 업데이트
  - TroubleService 업데이트
- elasticsearch.py에서 ELASTIC_MAPPINGS 상수를 get_elastic_mappings() 함수 호출로 변경
  - 임베딩 모델의 차원수에 따라 동적 매핑 생성

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -11,6 +11,12 @@ CHAT_MODEL_NAME=gpt-4o
 CHAT_MODEL_TEMPERATURE=0.5
 CHAT_MODEL_MAX_TOKENS=2000
 
+# Purpose-specific Model Configuration
+# Fast processing for log classification and comment generation
+PIPELINE_MODEL_NAME=gpt-4o-mini
+# Accurate analysis for troubleshooting
+TROUBLESHOOTING_MODEL_NAME=gpt-4o
+
 # Embedding Model Configuration (provider-specific)
 # OpenAI: text-embedding-3-small, text-embedding-3-large
 # HuggingFace/Ollama: sentence-transformers/all-MiniLM-L6-v2, sentence-transformers/all-mpnet-base-v2
