--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,5 +1,44 @@
+# LLM Provider Configuration
+# Supported: openai, anthropic, ollama, huggingface
+LLM_PROVIDER=openai
+
+# Chat Model Configuration (provider-specific)
+# OpenAI: gpt-4o, gpt-4o-mini
+# Anthropic: claude-3-5-sonnet-20241022, claude-3-haiku-20240307
+# Ollama: llama3.2, mistral, codellama
+# HuggingFace: microsoft/DialoGPT-medium, facebook/blenderbot-400M-distill
+CHAT_MODEL_NAME=gpt-4o
+CHAT_MODEL_TEMPERATURE=0.5
+CHAT_MODEL_MAX_TOKENS=2000
+
+# Purpose-specific Model Configuration
+# Fast processing for log classification and comment generation
+PIPELINE_MODEL_NAME=gpt-4o-mini
+# Accurate analysis for troubleshooting
+TROUBLESHOOTING_MODEL_NAME=gpt-4o
+
+# Embedding Model Configuration (provider-specific)
+# OpenAI: text-embedding-3-small, text-embedding-3-large
+# HuggingFace/Ollama: sentence-transformers/all-MiniLM-L6-v2, sentence-transformers/all-mpnet-base-v2
+EMBEDDING_MODEL_NAME=text-embedding-3-small
+
+# Embedding Vector Dimensions (must match model)
+# text-embedding-3-small: 1536, text-embedding-3-large: 3072
+# all-MiniLM-L6-v2: 384, all-mpnet-base-v2: 768
+EMBEDDING_VECTOR_DIMS=1536
+
 # OpenAI API Key
 OPENAI_API_KEY=sk-api-key
+
+# Anthropic API Key (Claude models)
+ANTHROPIC_API_KEY=sk-ant-api-key
+
+# Ollama Configuration (for local models)
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_TIMEOUT=60
+
+# HuggingFace Configuration (optional for local models)
+HUGGINGFACE_API_TOKEN=hf_api-token
 
 # Elasticsearch Configuration
 ELASTIC_HOST=http://localhost:9200
