--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -36,7 +36,6 @@ dependencies = [
     "watchfiles (==1.0.4)",
     "websockets (==15.0.1)",
     "mysql (>=0.0.3,<0.0.4)",
-    "mysqlclient (>=2.2.7,<3.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "numpy (>=2.2.4,<3.0.0)",
     "openai (>=1.72.0,<2.0.0)",
@@ -58,6 +57,8 @@ dependencies = [
     "langchain-community (>=0.3.27,<0.4.0)",
 ]
 
+[tool.poetry]
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
