refac[be]: Complete OpenSearch migration with environment and mapping updates
- .env 및 .env.sample 파일의 환경변수를 OpenSearch로 변경
- 벡터 필드 매핑을 dense_vector에서 knn_vector로 변경하여 OpenSearch 호환성 확보
- get_elastic_mappings를 get_opensearch_mappings로 함수명 변경
- 서비스 레이어의 ElasticsearchRepository를 OpenSearchRepository로 변경

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -40,10 +40,10 @@ OLLAMA_TIMEOUT=60
 # HuggingFace Configuration (optional for local models)
 HUGGINGFACE_API_TOKEN=hf_api-token
 
-# Elasticsearch Configuration
-ELASTIC_HOST=http://localhost:9200
-ELASTIC_USERNAME=elastic
-ELASTIC_PASSWORD=your-elastic-password
+# OpenSearch Configuration
+OPENSEARCH_HOST=http://localhost:9200
+OPENSEARCH_USERNAME=admin
+OPENSEARCH_PASSWORD=your-opensearch-password
 
 # MySQL Configuration
 MYSQL_USER=root
