--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
     "pydantic (>=2.11.3,<3.0.0)",
     "langchain-openai (>=0.3.14,<0.4.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
-    "elasticsearch (==8.17.1)",
+    "opensearch-py (>=3.0.0)",
     "pytest (>=8.3.5,<9.0.0)",
     "python-jose[cryptography] (>=3.5.0,<4.0.0)",
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
