--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -2,8 +2,9 @@
 name = "server"
 version = "0.1.0"
 description = ""
+license = {text = "Apache-2.0"}
 authors = [
-    {name = "Your Name",email = "you@example.com"}
+    {name = "LognLook",email = "yess9904@naver.com"}
 ]
 # readme = "README.md"
 requires-python = ">=3.11,<3.12"
