--- a/docs/logstash/example.conf
+++ b/docs/logstash/example.conf
@@ -1,3 +1,7 @@
+# Copyright 2025 LognLook
+# Licensed under the Apache License, Version 2.0
+# LognLook Logstash 설정 예시
+
 input {
     beats {
         port => "5044"
